@@ -19,7 +19,7 @@
             <TextBlock Text="Project Name:" Margin="5,5,350,5" VerticalAlignment="Center" />
             <TextBox Margin="155,5,5,5" Text="{Binding ProjectName, Mode=TwoWay}" Name="NameTextBox"
                      PreviewTextInput="NameTextBox_PreviewTextInput"
-                     PreviewKeyDown="NameTextBox_PreviewKeyDown" />
+                     PreviewKeyDown="NameTextBox_PreviewKeyDown" KeyDown="NameTextBox_KeyDown" />
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2">
@@ -33,7 +33,7 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Button Margin="5,5,0,7" Width="75" Height="23" Content="Add" Grid.Column="1" Grid.Row="2" Click="AddButton_Click" />
+            <Button Margin="5,5,0,7" Width="75" Height="23" Content="Add" Grid.Column="1" Grid.Row="2" Click="AddButton_Click" Name="AddButton" />
             <Button Margin="5,5,10,7" Width="75" Height="23" Content="Cancel" Grid.Column="1" Grid.Row="2" Click="CancelButton_Click" />
         </StackPanel>
     </Grid>
